# ai-scraping-defense

./: # setup.sh.txt  .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  11_Run environment tests.txt  15_Show failing container logs.txt  AGENTS.md  AI_Scraping_Defense_System_Presentation.pptx  ALERT_MANAGEMENT_SUMMARY.md  CHANGELOG.md  CHAT_RELEVANT_PLAYBOOK.md  CODE_SCANNING_ISSUES.md  CONTRIBUTING.md  Docker.md  Dockerfile  Dockerfile.txt  Dockerfile.ubuntu  Generate-Secrets.ps1  ISSUES_TO_CREATE.md  LICENSE  LICENSE.md  Old-Generate-Secrets.ps1  QUICK_START_ALERT_MANAGEMENT.md  README.md  Roadmap.docx  SECURITY.md  SECURITY_SUMMARY.md  START_HERE_ALERT_MANAGEMENT.md  WINDOWS_HANDOFF.md  WORKFLOW_FIXES_SUMMARY.md  WORKFLOW_INVESTIGATION_SUMMARY.md  admin_ui_log.txt  ai-scraping-defense.sln  architecture_problems_batch1.json  architecture_problems_batch2.json  architecture_problems_batch3.json  build.ps1  code_quality_problems_batch1.json  (+82 more)
.cargo/: config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  copilot-instructions.md  dependabot.yml  labeler.yml  security-policy.yml
.history/: docker-compose_20251031051107.yaml  docker-compose_20251031051304.yaml  requirements_20251031051023.txt  requirements_20251031095415.txt  sample.env_20251031100143.min  sample_20251031100129.env
admin_ui/: Dockerfile  admin_ui.py
ai_service/: ai_webhook.py
apache/: httpd.conf
backup-files/: Dockerfile.txt  requirements.txt
cloud-proxy/: Dockerfile  main.py
config/: features.yaml  governance.yaml  pricing.yaml  robots.txt  security.yaml  security_hardening.yaml
data/: wikipedia_corpus.txt
db/: init_markov.sql
docs/: ADMIN_UI_SSO.md  ANOMALY_ALERTING.md  ENHANCED_SECURITY_TESTING.md  ERROR_HANDLING.md  HTTP_CLIENT_POLICY.md  PAY_PER_CRAWL_BLOCKCHAIN_LOG.md  README.html  ROADMAP.md  SECURITY_BASELINE_GATE.md  SECURITY_HEADERS.md  SECURITY_SCAN_EVALUATION.md  SECURITY_TESTING_GUIDE.md  advanced_crypto.md  alert_management_flow.md  alert_management_guide.md  antivirus.md  api_references.md  api_trust_boundaries.md  api_versioning.md  architecture.md  architecture.mmd  architecture_modernization_baseline.md  attack_simulation_profiles.md  behavioral_honeypot.md  ci-security-regression.md  cloud_provider_deployment.md  code_of_conduct.md  code_scanning_process.md  compliance_controls_baseline.md  compliance_governance_assurance_baseline.md  configuration.md  container_runtime_security.md  creating_issues_from_alerts.md  data_protection_baseline.md  delivery_policy_enforcement_baseline.md  devsecops-integration.md  devsecops.md  disaster_recovery.md  edge_enhancements.md  engineering_quality_baseline.md  (+66 more)
docs_ui/: deployment_guide.html  index.html  welcome.html
escalation/: Dockerfile  __init__.py  escalation_engine.py
frequency-rs/: Cargo.toml
frequency-rs/src/: lib.rs
goaccess/: goaccess.conf
helm/: canary-values.yaml  values-production.yaml  values-staging.yaml
iis/: configure_proxy.ps1  start_services.ps1
jszip-rs/: Cargo.toml  build.rs
jszip-rs/src/: lib.rs
jszip-rs/tests/: integration.rs
kubernetes/: admin-ui-deployment.yaml  ai-service-deployment.yaml  archive-rotator-deployment.yaml  archives-pvc.yaml  configmap.yaml  corpus-pvc.yaml  corpus-updater-cronjob.yaml  escalation-engine-deployment.yaml  fail2ban-deployment.yaml  markov-model-trainer.yaml  markov-trainer-job.yaml.txt  models-pvc.yaml  namespace-pss.yaml  namespace.yaml  network-policies.yaml  nginx-deployment.yaml  nginx-logs-pvc.yaml  pod-disruption-budgets.yaml  postgres-init-script-cm.yaml  postgres-statefulset.yaml  redis-statefulset.yaml  resource-quotas.yaml  robots-fetcher-cronjob.yaml  robots-fetcher-rbac.yaml  runtime-security-policies.yaml  secrets.yaml  service-accounts.yaml  suricata-deployment.yaml  tarpit-api-deployment.yaml  waf-rules-fetcher-cronjob.yaml  waf-rules-fetcher-rbac.yaml
markov-train-rs/: Cargo.toml
markov-train-rs/src/: lib.rs  main.rs
markov-train-rs/tests/: tokenize.rs
mocks/: community_blocklist_api.yaml  external_api.yaml  ip_reputation_api.yaml
monitoring/: prometheus.yml  security_rules.yml
nginx/: example_main_website_nginx.conf  nginx.conf  nginx.default.conf  nginx.performance.conf  render_cdn_origin_lockdown.sh
plugins/: ua_blocker.py
prompt-router/: Dockerfile  main.py
proxy/: Dockerfile
rag/: __init__.py  finetune.py  train_markov_postgres.py  training.py
scripts/: ALERT_MANAGEMENT_README.md  README.md  (+37 more)
(+519 files in other folders)
