[package]
name = "frequency-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[lib]
name = "frequency_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.2", features = ["extension-module"] }
redis = "0.23"
chrono = "0.4"

# Optimize register allocation and performance for release builds
[profile.release]
opt-level = 3              # Maximum optimization
lto = "thin"               # Link-time optimization for better register allocation
codegen-units = 1          # Single codegen unit reduces register pressure
strip = true               # Strip symbols to reduce binary size
panic = "abort"            # Abort on panic reduces overhead
