[package]
name = "frequency-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[lib]
name = "frequency_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.2", features = ["extension-module"] }
redis = "0.23"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
