cargo-features = ["edition2024"]

[package]
name = "jszip-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
build = "build.rs"

[lib]
name = "jszip_rs"
# Include an rlib for unit tests in addition to the Python extension module
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["abi3-py37", "extension-module", "auto-initialize"] }
zip = "6.0"
rand = "0.9"
chrono = "0.4"
tempfile = "3"

[build-dependencies]
pyo3-build-config = { version = "0.27.1", features = ["resolve-config"] }

# Optimize register allocation and performance for release builds
[profile.release]
opt-level = 3              # Maximum optimization
lto = "thin"               # Link-time optimization for better register allocation
codegen-units = 1          # Single codegen unit reduces register pressure
strip = true               # Strip symbols to reduce binary size
panic = "abort"            # Abort on panic reduces overhead
