cargo-features = ["edition2024"]

[package]
name = "jszip-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
build = "build.rs"

[lib]
name = "jszip_rs"
# Include an rlib for unit tests in addition to the Python extension module
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["abi3-py37", "extension-module", "auto-initialize"] }
zip = "7.0"
rand = "0.9"
chrono = "0.4"
tempfile = "3"

[build-dependencies]
pyo3-build-config = { version = "0.27.1", features = ["resolve-config"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
