[package]
name = "markov-train-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[lib]
name = "markov_train_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28.1", features = ["extension-module"] }
postgres = "0.19"
regex = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
